Version 4.0.25 (2014-04-30)
	Fixed bug where it wasn't possible to submit forms with editor instances on WebKit/Blink.
Version 4.0.24 (2014-04-30)
	Added new event_root setting for inline editors. Lets you bind all editor events on a parent container.
	Fixed bug where show/hide/isHidden didn't work properly for inline editor instances.
	Fixed bug where preview plugin dialog didn't handle relative urls properly.
	Fixed bug where the autolink plugin would remove the trailing space after an inserted link.
	Fixed bug in paste plugin where pasting in a page with scrollbars would scroll to top of page in webkit browsers.
	Fixed bug where the paste plugin on WebKit would remove styles from pasted source code with style attributes.
	Fixed so image_list/link_list can be a function that allows custom async calls to populate these lists.
Version 4.0.23 (2014-04-24)
	Added isSameOrigin method to tinymce.util.URI it handles default protocol port numbers better. Patch contributed by Matt Whelan.
	Fixed bug where IE 11 would add br elements to the end of the editor body element each time it was shown/hidden.
	Fixed bug where the autolink plugin would produce an index out of range exception for some very specific HTML.
	Fixed bug where the charmap plugin wouldn't properly insert non breaking space characters when selected.
	Fixed bug where pasting from Excel 2011 on Mac didn't produce a proper table when using the paste plugin.
	Fixed bug where drag/dropping inside a table wouldn't properly end the table cell selection.
	Fixed bug where drag/dropping images within tables on Safari on Mac wouldn't work properly.
	Fixed bug where editors couldn't be re-initialized if they where externally destroyed.
	Fixed bug where inline editors would produce a range index exception when clicking on buttons like bold.
	Fixed bug where the preview plugin wouldn't properly handle non encoded upper UTF-8 characters.